--- a/style.css
+++ b/style.css
@@ -10,19 +10,25 @@
 h1 {
     text-align: center;
     margin: auto;
-    font-size: 80px;
+    font-size: 70px;
     font-family: 'Archivo Black', sans-serif;
 }
 
 h3 {
-    font-size: 50px;
+    font-size: 40px;
+}
+
+#instruction {
+    text-align: center;
+    font-size: 20px;
+    font-family: 'Archivo Black', sans-serif;
+    margin: auto;
 }
 
 #rules {
     font-family: 'Slabo 27px', serif;
     font-size: 40px;
     text-align: center;
-    margin-top: 40px;
 }
 
 /*Each rule has the repeated code so that they will each have the transition and have the same formatting*/
@@ -30,7 +36,7 @@ h3 {
 #rule1 {
     display: inline-block;
     /*allows the divs to be placed next to each other, while still allowing to take up an indicated amount of space*/
-    margin-right: 40px;
+    margin-right: 30px;
     color: gray;
     transition: color 1s, box-shadow 1s;
     /*will change the font color and create a box-shadow, each for 1 second*/
@@ -46,7 +52,7 @@ h3 {
 
 #rule2 {
     display: inline-block;
-    margin-right: 40px;
+    margin-right: 30px;
     color: gray;
     transition: background-color 1s, color 1s, box-shadow 1s;
 }
@@ -59,7 +65,7 @@ h3 {
 
 #rule3 {
     display: inline-block;
-    margin-right: 40px;
+    margin-right: 30px;
     color: gray;
     transition: background-color 1s, color 1s, box-shadow 1s;
 }
@@ -82,8 +88,50 @@ h3 {
     color: black;
 }
 
-#examples {
+#power {
     font-size: 30px;
-    text-align: center;
-    margin-top: 40px;
+    display: inline-block;
+    margin-right: 40px;
+    opacity:0;
+    transition:opacity 1s linear;
+}
+
+#rule1:hover + #power {
+  opacity:1;
+}
+
+#product {
+    font-size: 30px;
+    display: inline-block;
+    margin-right: 40px;
+    opacity:0;
+    transition:opacity 1s linear;
+}
+
+#rule2:hover + #product {
+  opacity:1;
+}
+
+#quotient {
+    font-size: 30px;
+    display: inline-block;
+    margin-right: 40px;
+    opacity:0;
+    transition:opacity 1s linear;
+}
+
+#rule3:hover + #quotient {
+  opacity:1;
+}
+
+#chain {
+    font-size: 30px;
+    display: inline-block;
+    margin-left: 40px;
+    opacity:0;
+    transition:opacity 1s linear;
+}
+
+#rule4:hover + #chain {
+  opacity:1;
 }
