--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@ h1 {
     margin: auto;
     font-size: 70px;
     font-family: 'Archivo Black', sans-serif;
+    animation: spin 5s 1;
+}
+
+@keyframes spin {
+    from{transform: rotateY(0deg);}
+    to{transform: rotateY(360deg);}
 }
 
 h3 {
@@ -86,6 +92,7 @@ h3 {
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
     background-color: lightblue;
     color: black;
+    
 }
 
 #power {
